Implement Add task (in progress)

--- a/todo-web/index.html
+++ b/todo-web/index.html
@@ -86,24 +86,24 @@
                   <input type="hidden" id="task-id">
                   <div class="mb-3">
                      <label for="taskName" class="form-label">Task Name</label>
-                     <input type="text" class="form-control" id="task-name" required>
+                     <input type="text" class="form-control" id="task-name" name="name" required>
                   </div>
                   <div class="mb-3">
                      <label for="taskDescription" class="form-label">Description</label>
-                     <textarea class="form-control" id="task-desc" rows="3"></textarea>
+                     <textarea class="form-control" id="task-desc" rows="3" name="description" required></textarea>
                   </div>
                   <div class="mb-3">
                      <label for="dueDate" class="form-label">Due Date</label>
-                     <input type="date" class="form-control" id="due-date" required>
+                     <input type="date" class="form-control" id="due-date" name="dueDate" required>
                   </div>
                   <div class="mb-3">
                      <label for="dueTime" class="form-label">Due Time</label>
-                     <input type="time" class="form-control" id="due-time" required>
+                     <input type="time" class="form-control" id="due-time" name="dueTime" required>
                   </div>
                </div>
                <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn btn-primary">Add Task</button>
+                  <button type="submit" class="btn btn-primary" id="addTaskBtn">Add Task</button>
                </div>
             </form>
          </div>
