--- a/todo-web/register.html
+++ b/todo-web/register.html
@@ -19,7 +19,7 @@
             <h4 class="fw-bold">Create Account</h4>
             <p class="text-muted small">Register to start managing your tasks</p>
          </div>
-         <form>
+         <form id="registerForm">
             <div class="mb-3">
                <label for="register-name" class="form-label">Full Name</label>
                <input type="text" class="form-control" id="register-name" placeholder="Enter your name" required>
@@ -37,7 +37,7 @@
                      onclick="togglePassword('register-password', this)"><i class="bi bi-eye"></i></button>
                </div>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Register</button>
+            <button type="submit" class="btn btn-primary w-100" id="registerBtn">Register</button>
          </form>
       </div>
    </div>
@@ -58,6 +58,7 @@
          }
       }
    </script>
+   <script src="js/auth.js"></script>
 </body>
 
 </html>
