--- a/todo-web/index.html
+++ b/todo-web/index.html
@@ -53,7 +53,7 @@
          <h1 class="h3 fw-bold text-dark">My Tasks</h1>
          <!-- <button class="btn btn-primary d-flex align-items-center action-btn" data-bs-toggle="modal"
             data-bs-target="#addTaskModal"> -->
-         <button class="btn btn-primary action-btn" onclick="openTaskModal()">
+         <button class="btn btn-primary action-btn" id="modalBtn">
             <i class="bi bi-plus-lg me-2"></i> Add Task
          </button>
       </div>
@@ -103,7 +103,7 @@
                </div>
                <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                  <button type="submit" class="btn btn-primary" id="addTaskBtn">Add Task</button>
+                  <button type="button" class="btn btn-primary" id="addTaskBtn">Add Task</button>
                </div>
             </form>
          </div>
@@ -111,7 +111,7 @@
    </div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="js/modal.js"></script>
+   <script type="module" src="js/modal.js"></script>
    <script type="module" src="js/script.js"></script>
 </body>
 
