--- a/todo-web/index.html
+++ b/todo-web/index.html
@@ -21,9 +21,9 @@
                alt="User Avatar" class="rounded-circle" width="32" height="32"> -->
             <i class="bi bi-check2-all text-primary " style="font-size: 1.8rem;"></i>
             <div class="ms-2">
-               <div class="fw-medium text-dark">John Doe</div>
+               <div class="fw-medium text-dark" id="loggedInName">John Doe</div>
                <div class="user-details">
-                  <div class="text-muted small">john.doe@example.com</div>
+                  <div class="text-muted small" id="loggedInEmail">john.doe@example.com</div>
                </div>
             </div>
          </a>
@@ -83,7 +83,7 @@
             </div>
             <form id="taskForm">
                <div class="modal-body">
-                  <input type="hidden" id="task-id">
+                  <input type="hidden" id="task-id" name="id">
                   <div class="mb-3">
                      <label for="task-name" class="form-label">Task Name</label>
                      <input type="text" class="form-control" id="task-name" name="name" required>
@@ -103,7 +103,7 @@
                </div>
                <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                  <button type="button" class="btn btn-primary" id="addTaskBtn">Add Task</button>
+                  <button type="button" class="btn btn-primary" id="addTaskBtn">Add</button>
                </div>
             </form>
          </div>
@@ -111,7 +111,7 @@
    </div>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="js/modal.js"></script>
+   <script type="modal" src="js/modal.js"></script>
    <script type="module" src="js/script.js"></script>
 </body>
 
