--- a/todo-web/index.html
+++ b/todo-web/index.html
@@ -39,8 +39,8 @@
             </div>
             <div class="offcanvas-body">
                <div class="navbar-nav ms-auto">
-                  <a class="nav-link" href="#"><i class="bi bi-gear me-1"></i> Settings</a>
-                  <a class="nav-link" href="#"><i class="bi bi-box-arrow-right me-1"></i> Logout</a>
+                  <!-- <a class="nav-link" href="#"><i class="bi bi-gear me-1"></i> Settings</a> -->
+                  <a class="nav-link" id="logoutBtn"><i class="bi bi-box-arrow-right me-1"></i> Logout</a>
                </div>
             </div>
          </div>
