Add Navigations for login and register, Empty tasks screen

--- a/todo-web/login.html
+++ b/todo-web/login.html
@@ -32,11 +32,10 @@
                      onclick="togglePassword('login-password', this)"><i class="bi bi-eye"></i></button>
                </div>
             </div>
-            <!-- <div class="mb-3 form-check">
-               <input type="checkbox" class="form-check-input" id="remember">
-               <label class="form-check-label" for="remember">Remember me</label>
-            </div> -->
             <button type="submit" class="btn btn-primary w-100">Login</button>
+            <div class="container text-center mt-3">
+               Don't have an account? <a href="register.html">Register</a>
+            </div>
          </form>
       </div>
    </div>
