--- a/todo-web/register.html
+++ b/todo-web/register.html
@@ -38,6 +38,9 @@
                </div>
             </div>
             <button type="submit" class="btn btn-primary w-100" id="registerBtn">Register</button>
+            <div class="container text-center mt-3">
+               Already have an account? <a href="login.html">Login</a>
+            </div>
          </form>
       </div>
    </div>
